--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mdb-react-ui-kit": "^3.0.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
+    "react-currency-format": "^1.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
